# pwm-public

./: .gitmodules  LICENSE  README.md
pwm-team/infrastructure/agent-cli/: CLAUDE.md  README.md  plan.md  pyproject.toml  validation.md
pwm-team/infrastructure/agent-cli/examples/: demo_solver.py
pwm-team/infrastructure/agent-cli/pwm_node/: __init__.py  __main__.py  canonical.py  chain.py  ipfs.py
pwm-team/infrastructure/agent-cli/pwm_node/commands/: __init__.py  agent.py  balance.py  benchmarks.py  inspect.py  match.py  mine.py  sp.py  stake.py  submit.py  verify.py
pwm-team/infrastructure/agent-cli/tests/: conftest.py  test_balance.py  test_chain.py  test_cli.py  test_hash_convention.py  test_ipfs.py  test_match.py  test_mine.py  test_sp.py  test_stake.py  test_submit.py
pwm-team/infrastructure/agent-cli/tests/e2e/: README.md  test_mine_dry_run.py  test_sepolia_readonly.py
pwm-team/infrastructure/agent-scoring/: CLAUDE.md  plan.md  pyproject.toml  validation.md
pwm-team/infrastructure/agent-scoring/pwm_scoring/: __init__.py  epsilon.py  gates.py  metrics.py  score.py  tracks.py
pwm-team/infrastructure/agent-scoring/tests/: test_epsilon.py  test_gates.py  test_metrics.py  test_score_integration.py  test_tracks.py
scripts/: add_display_slugs.py  bounty07_minability_monitor.py  canonicalize_l1_primitives.py  check_deployer_balance.py  console_error_sweep.py  count_external_l4.py  count_founder_mining_txns.py  count_registered_principles.py  cutover_explorer_to_mainnet.sh  daily_stability_check.sh  download_weights.sh  fix_slug_collisions.py  generate_benchmark_cards.py  generate_demos.py  generate_l2_l3_skeletons.py  indexer_health_watchdog.sh  live_mine_demo.py  (+33 more)
(+2407 files in other folders)
